--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="stylesheet" href="https://agniui.netlify.app/styles.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 <body>
